--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Glitchy Midnight Testnet Explorer - Privacy in the Shadows" />
+    <meta name="description" content="Midnight Glitch Explorer — Privacy in the Shadows" />
     <title>Midnight Glitch Explorer</title>
     <style>
-      body { background: #000; color: #00ffff; font-family: 'Courier New', monospace; }
-      /* Basic cyberpunk scan lines */
-      ::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0,255,255,0.03) 2px, rgba(0,255,255,0.03) 4px); pointer-events: none; z-index: 9999; }
+      body { margin: 0; background: #000; }
+      body::before {
+        content: '';
+        position: fixed;
+        top: 0; left: 0; right: 0; bottom: 0;
+        background: repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0,255,255,0.03) 2px, rgba(0,255,255,0.03) 4px);
+        pointer-events: none;
+        z-index: 9999;
+      }
     </style>
   </head>
   <body>
