--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Midnight Glitch Explorer — Privacy in the Shadows" />
-    <title>Midnight Glitch Explorer</title>
+    <meta name="description" content="Midnight Explorer — Privacy in the Shadows" />
+    <title>Midnight Explorer</title>
     <style>
       body { margin: 0; background: #000; }
       body::before {
